v2.5.8.0 - Bug fixed Reel/EDL window when two reels were loaded and clips could
	   not be selected.
	 - Updated all platforms to use ffmpeg 2.2.
v2.5.7.4 - Bug fixed ghosting of lines and text in grease marker's previous
	   or next frames.
	 - Updated all platforms to use OpenEXR 2.1.0.
v2.5.7.3 - Bug fixed two crashes in EDL window and most of its functionality.
	 - Bug fixed a hang up in EDL window when not in EDL mode.
	 - Internally changed PixelType to just Pixel to simplify api.
	 - Added support to parse commandline for left/right (stereo) images.
	 - Bug fixed disappearing picture when opening menu in window with
	   DVD sub.
	 - Bug fixed movies not starting at first frame.
v2.5.7.2 - Removed Xlib DSOs from linux distribution to make them run in other
	   machines.
v2.5.7.1 - Added memset() to exr images as changing layers could leave traces
	   of wrong data.
v2.5.7.0 - Added Text support to OpenGL grease pencil drawing.
	 - Fixed communications protocol which could lead to missing commands.
	 - Made EXR reader a tad faster by reading attributes only once.
	 - Fixed mp4's of mp3 where a single frame is shown all during one song.
	 - Fixed recognition of some formats like mp3.
	 - Fixed a crash on remote connections when no image was loaded.
	 - Fixed a bug that was not using the full paths to the file.
v2.5.6.4 - Bug fixed OpenGL snapshot of stills.  Now it is What You See Is 
	   What You Get.
	   Made RGBA values represent what is seen (applying gamma and gain).
v2.5.6.3 - Bug fixed drag and drop to support movie files with numbers in them.
v2.5.6.2 - Fixed RGBA movie playback where colors would be reversed.
	 - Fixed audio hanging up on EDL playback.
	 - Fixed favorites folder on Windows which had gotten broken.
	 - Made arrows in popup menus appear behind the text and in dark gray.
v2.5.6.1 - Fixed audio playback of some movies where it could stutter.
v2.5.6   - Fixed reverse playback (albeit still not perfect).