@@ -1,5 +1,6 @@
 v2.5.8.0 - Bug fixed Reel/EDL window when two reels were loaded and clips could
 	   not be selected.
+	 - Bug fixed EDL Edit window to support more than two reels.
 	 - Updated all platforms to use ffmpeg 2.2.
 v2.5.7.4 - Bug fixed ghosting of lines and text in grease marker's previous
 	   or next frames.
